# qwen-voice-clone

./: .dockerignore  .gitignore  Dockerfile  README.md  cosyvoice-clone.py  cosyvoice-tts.py  default_texts.yml  main.py  pyproject.toml  rustfs.py  vc.py  voice_extract.py  voice_filter.py
.github/workflows/: docker-publish.yml
static/: cosyvoice-clone.html  index.html  qwen-voice-clone.html  voice-extract.html
todo/: corpus.txt  cosyvoice.txt  qwen-voice-clone.txt  voice_cute.txt  voice_filter.txt
