[project]
name = "voice-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.16",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "soxr>=1.0.0",
    "boto3>=1.42.94",
    "pyyaml>=6.0",
]
