[project]
name = "voice-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.16",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "soxr>=1.0.0",
    "boto3>=1.42.94",
    "pyyaml>=6.0",
    "yt-dlp>=2025.1.15",
    "demucs>=4.0.1",
    "silero-vad>=5.1",
    "speechbrain>=1.0.0",
    "scikit-learn>=1.5",
    "librosa>=0.10",
    "soundfile>=0.12",
    "torch>=2.2",
    "torchaudio>=2.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchaudio = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true